--- a/style.css
+++ b/style.css
@@ -1,3 +1,406 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+html,
 body {
-  background-color: green;
+  height: 100%;
+}
+body {
+  background-color: #404040;
+}
+body > img,
+body > table {
+  display: none;
+}
+img + #main > #content {
+  overflow: auto;
+  display: -webkit-inline-flex;
+  display: -moz-inline-flex;
+  display: -ms-inline-flexbox;
+  display: -ms-inline-flex;
+  display: inline-flex;
+}
+img + #main > #content > .content-box {
+  width: initial !important;
+  border: initial !important;
+  background-color: initial !important;
+  margin: 0 auto;
+  line-height: 0;
+}
+img + #main > #content > .content-box > p,
+img + #main > #content > .content-box > h2,
+img + #main > #content > .content-box > div,
+img + #main > #content > .content-box > table {
+  display: none;
+}
+img + #main > #content > .content-box > table:nth-last-of-type(2),
+img + #main > #content > .content-box > table:last-of-type {
+  display: block;
+}
+img + #main > #content > .content-box > table:nth-last-of-type(2) {
+  width: initial;
+}
+img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+}
+img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td {
+  -webkit-flex-grow: 1;
+  -moz-flex-grow: 1;
+  -ms-flex-grow: 1;
+  flex-grow: 1;
+  -webkit-flex-shrink: 0;
+  -moz-flex-shrink: 0;
+  -ms-flex-shrink: 0;
+  flex-shrink: 0;
+  position: relative;
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+}
+img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > a {
+  display: block;
+}
+img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > a > img {
+  padding: initial !important;
+  border: initial !important;
+  width: 130px;
+  height: auto;
+  z-index: 1;
+  position: relative;
+}
+img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > div {
+  width: 130px !important;
+  padding-top: 0 !important;
+}
+img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > div > a {
+  display: block;
+  padding: 8px 5px;
+  color: white;
+  z-index: 1;
+  position: relative;
+  line-height: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 12px;
+}
+img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td:hover::before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  background-color: #606060;
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
+}
+img + #main > #content > .content-box > table:last-of-type {
+  padding: 10px 0;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+}
+img + #main > #content > .content-box > table:last-of-type > tbody {
+  margin: 0 auto;
+}
+img + #main > #content > .content-box > table:last-of-type > tbody > tr > td {
+  width: initial !important;
+  height: initial !important;
+  padding-left: initial !important;
+  padding-right: initial !important;
+  padding: 5px 10px !important;
+  background-color: #353535 !important;
+  border: 1px solid black !important;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  /*-moz-background-clip:    padding;
+	-webkit-background-clip: padding-box;
+	background-clip:         padding-box;*/
+  overflow: hidden;
+}
+img + #main > #content > .content-box > table:last-of-type > tbody > tr > td > a {
+  margin: -5px -10px;
+  padding: 5px 10px;
+  background-color: #606060;
+  display: block;
+  color: white !important;
+}
+img + #main > #content > .content-box > table:last-of-type > tbody > tr > td > a:hover {
+  background-color: #505050;
+}
+img + #main > #content > .content-box > h1,
+img + #main > #content > .content-box > table,
+img + #main > #content > .content-box > form {
+  line-height: initial;
+}
+img + #main > #content > .content-box > h1 {
+  font-family: sans-serif;
+  border-bottom: initial;
+  padding-top: initial;
+  padding-bottom: initial;
+  padding-left: initial;
+  padding: 10px;
+  background-color: initial;
+  color: white;
+  font-size: 16px;
+}
+img + #main > #content > .content-box > h1 > strong > font {
+  color: white;
+}
+img + #main > #content > .content-box > .table,
+img + #main > #content > .content-box > .table2 {
+  font-size: initial;
+  font-family: sans-serif;
+}
+iframe + #main > #content {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+  -webkit-flex-grow: 1;
+  -moz-flex-grow: 1;
+  -ms-flex-grow: 1;
+  flex-grow: 1;
+}
+iframe + #main > #content #left {
+  width: 400px;
+  background-color: red;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  overflow: auto;
+}
+iframe + #main > #content #left > * {
+  -webkit-flex-shrink: 0;
+  -moz-flex-shrink: 0;
+  -ms-flex-shrink: 0;
+  flex-shrink: 0;
+}
+iframe + #main > #content #left > #info {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+}
+iframe + #main > #content #left > #info > img {
+  width: 130px;
+  height: auto;
+}
+iframe + #main > #content #left > #info > table {
+  width: calc(100% - 130px);
+}
+iframe + #main > #content #right {
+  -webkit-flex-grow: 1;
+  -moz-flex-grow: 1;
+  -ms-flex-grow: 1;
+  flex-grow: 1;
+  background-color: blue;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  overflow: auto;
+}
+iframe + #main > #content #right #embed {
+  height: 100%;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+}
+iframe + #main > #content #right #embed > table {
+  height: 100%;
+  background-color: yellow;
+}
+iframe + #main > #content #right #embed > table > tbody > tr:first-child {
+  display: none;
+}
+iframe + #main > #content #right #embed > table > tbody > tr:last-child > td > .video {
+  padding-top: initial !important;
+  padding-bottom: initial !important;
+  background-color: orange;
+  height: 100%;
+}
+iframe + #main > #content #right #embed > table > tbody > tr:last-child > td > .video > iframe:first-of-type {
+  display: block;
+  background-color: aqua;
+  width: 100%;
+  height: 100%;
+}
+iframe + #main > #content #right #embed > table > tbody > tr:last-child > td > .video > iframe:last-of-type {
+  display: none;
+  background-color: pink;
+}
+#main {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 100%;
+}
+#main > #menu,
+#main > #search-form {
+  border-bottom: 2px solid black;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+  -webkit-flex-shrink: 0;
+  -moz-flex-shrink: 0;
+  -ms-flex-shrink: 0;
+  flex-shrink: 0;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+#main > #search-form > form {
+  margin: 10px auto;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+}
+#main > #search-form > form > input[type=text] {
+  font-size: initial !important;
+  width: 300px !important;
+  color: black !important;
+  background-color: white !important;
+  border: initial !important;
+  border-top: 1px solid black !important;
+  border-bottom: 1px solid black !important;
+  border-left: 1px solid black !important;
+  padding: 0 10px !important;
+  height: 30px !important;
+  line-height: 28px;
+  outline: none;
+}
+#main > #search-form > form > input[type=submit] {
+  border: 1px solid black !important;
+  width: initial !important;
+  height: 30px !important;
+  line-height: 28px;
+  font-size: initial !important;
+  padding: 0 10px !important;
+  background-color: #606060 !important;
+  color: white;
+  cursor: pointer;
+  outline: none;
+}
+#main > #search-form > form > input[type=submit]:hover {
+  background-color: #505050 !important;
+}
+#main > #menu {
+  background-color: #2980b9;
+}
+#main > #menu > #nav {
+  margin: 0 auto;
+  width: initial;
+  height: initial;
+  background: initial;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: initial;
+}
+#main > #menu > #nav > li:nth-child(7),
+#main > #menu > #nav > li:nth-child(8) {
+  display: none;
+}
+#main > #menu > #nav > li:hover > .dropdown,
+#main > #menu > #nav > li:hover > .dropdown2 {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: flex;
+}
+#main > #menu > #nav > li {
+  float: initial;
+  font: initial;
+  height: initial;
+  line-height: initial;
+  margin: initial;
+}
+#main > #menu > #nav > li > .dropdown,
+#main > #menu > #nav > li > .dropdown2 {
+  top: 100%;
+  left: 0;
+  border: 2px solid black;
+  width: initial;
+  background-color: #707070;
+}
+#main > #menu > #nav > li > .dropdown > .col1,
+#main > #menu > #nav > li > .dropdown2 > .col1 {
+  margin: initial;
+  width: initial !important;
+}
+#main > #menu > #nav > li > .dropdown > .col1 > ul > li,
+#main > #menu > #nav > li > .dropdown2 > .col1 > ul > li {
+  line-height: initial;
+  padding: initial;
+  background: initial;
+}
+#main > #menu > #nav > li > .dropdown > .col1 > ul > li > a,
+#main > #menu > #nav > li > .dropdown2 > .col1 > ul > li > a {
+  padding: 10px 15px;
+  color: white;
+  font-size: initial;
+  white-space: nowrap;
+}
+#main > #menu > #nav > li > .dropdown > .col1 > ul > li > a:hover,
+#main > #menu > #nav > li > .dropdown2 > .col1 > ul > li > a:hover {
+  color: white;
+  background-color: #606060;
+}
+#main > #menu > #nav > li > a {
+  padding: 10px 15px;
+  font-family: sans-serif;
+  white-space: nowrap;
+}
+#main > #menu > #nav > li > a:hover {
+  color: white;
+  background-color: #1067A0;
 }
