--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body > img,
 body > table {
   display: none;
 }
-img + #main > #content {
+div + #main > #content {
   overflow: auto;
   display: -webkit-inline-flex;
   display: -moz-inline-flex;
@@ -25,34 +25,34 @@ img + #main > #content {
   display: -ms-inline-flex;
   display: inline-flex;
 }
-img + #main > #content > .content-box {
+div + #main > #content > .content-box {
   width: initial !important;
   border: initial !important;
   background-color: initial !important;
   margin: 0 auto;
   line-height: 0;
 }
-img + #main > #content > .content-box > p,
-img + #main > #content > .content-box > h2,
-img + #main > #content > .content-box > div,
-img + #main > #content > .content-box > table {
+div + #main > #content > .content-box > p,
+div + #main > #content > .content-box > h2,
+div + #main > #content > .content-box > div,
+div + #main > #content > .content-box > table {
   display: none;
 }
-img + #main > #content > .content-box > table:nth-last-of-type(2),
-img + #main > #content > .content-box > table:last-of-type {
+div + #main > #content > .content-box > table:nth-last-of-type(2),
+div + #main > #content > .content-box > table:last-of-type {
   display: block;
 }
-img + #main > #content > .content-box > table:nth-last-of-type(2) {
+div + #main > #content > .content-box > table:nth-last-of-type(2) {
   width: initial;
 }
-img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr {
+div + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr {
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flexbox;
   display: -ms-flex;
   display: flex;
 }
-img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td {
+div + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td {
   -webkit-flex-grow: 1;
   -moz-flex-grow: 1;
   -ms-flex-grow: 1;
@@ -67,10 +67,10 @@ img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr >
   padding-left: 10px !important;
   padding-right: 10px !important;
 }
-img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > a {
+div + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > a {
   display: block;
 }
-img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > a > img {
+div + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > a > img {
   padding: initial !important;
   border: initial !important;
   width: 130px;
@@ -78,11 +78,11 @@ img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr >
   z-index: 1;
   position: relative;
 }
-img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > div {
+div + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > div {
   width: 130px !important;
   padding-top: 0 !important;
 }
-img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > div > a {
+div + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td > div > a {
   display: block;
   padding: 8px 5px;
   color: white;
@@ -94,7 +94,7 @@ img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr >
   text-overflow: ellipsis;
   font-size: 12px;
 }
-img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td:hover::before {
+div + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr > td:hover::before {
   content: '';
   position: absolute;
   top: 10px;
@@ -106,7 +106,7 @@ img + #main > #content > .content-box > table:nth-last-of-type(2) > tbody > tr >
   -moz-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.75);
 }
-img + #main > #content > .content-box > table:last-of-type {
+div + #main > #content > .content-box > table:last-of-type {
   padding: 10px 0;
   display: -webkit-flex;
   display: -moz-flex;
@@ -114,10 +114,10 @@ img + #main > #content > .content-box > table:last-of-type {
   display: -ms-flex;
   display: flex;
 }
-img + #main > #content > .content-box > table:last-of-type > tbody {
+div + #main > #content > .content-box > table:last-of-type > tbody {
   margin: 0 auto;
 }
-img + #main > #content > .content-box > table:last-of-type > tbody > tr > td {
+div + #main > #content > .content-box > table:last-of-type > tbody > tr > td {
   width: initial !important;
   height: initial !important;
   padding-left: initial !important;
@@ -133,22 +133,22 @@ img + #main > #content > .content-box > table:last-of-type > tbody > tr > td {
 	background-clip:         padding-box;*/
   overflow: hidden;
 }
-img + #main > #content > .content-box > table:last-of-type > tbody > tr > td > a {
+div + #main > #content > .content-box > table:last-of-type > tbody > tr > td > a {
   margin: -5px -10px;
   padding: 5px 10px;
   background-color: #606060;
   display: block;
   color: white !important;
 }
-img + #main > #content > .content-box > table:last-of-type > tbody > tr > td > a:hover {
+div + #main > #content > .content-box > table:last-of-type > tbody > tr > td > a:hover {
   background-color: #505050;
 }
-img + #main > #content > .content-box > h1,
-img + #main > #content > .content-box > table,
-img + #main > #content > .content-box > form {
+div + #main > #content > .content-box > h1,
+div + #main > #content > .content-box > table,
+div + #main > #content > .content-box > form {
   line-height: initial;
 }
-img + #main > #content > .content-box > h1 {
+div + #main > #content > .content-box > h1 {
   font-family: sans-serif;
   border-bottom: initial;
   padding-top: initial;
@@ -159,15 +159,15 @@ img + #main > #content > .content-box > h1 {
   color: white;
   font-size: 16px;
 }
-img + #main > #content > .content-box > h1 > strong > font {
+div + #main > #content > .content-box > h1 > strong > font {
   color: white;
 }
-img + #main > #content > .content-box > .table,
-img + #main > #content > .content-box > .table2 {
+div + #main > #content > .content-box > .table,
+div + #main > #content > .content-box > .table2 {
   font-size: initial;
   font-family: sans-serif;
 }
-iframe + #main > #content {
+noscript + #main > #content {
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flexbox;
@@ -178,7 +178,7 @@ iframe + #main > #content {
   -ms-flex-grow: 1;
   flex-grow: 1;
 }
-iframe + #main > #content #left {
+noscript + #main > #content #left {
   width: 400px;
   background-color: red;
   display: -webkit-flex;
@@ -192,27 +192,27 @@ iframe + #main > #content #left {
   flex-direction: column;
   overflow: auto;
 }
-iframe + #main > #content #left > * {
+noscript + #main > #content #left > * {
   -webkit-flex-shrink: 0;
   -moz-flex-shrink: 0;
   -ms-flex-shrink: 0;
   flex-shrink: 0;
 }
-iframe + #main > #content #left > #info {
+noscript + #main > #content #left > #info {
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flexbox;
   display: -ms-flex;
   display: flex;
 }
-iframe + #main > #content #left > #info > img {
+noscript + #main > #content #left > #info > img {
   width: 130px;
   height: auto;
 }
-iframe + #main > #content #left > #info > table {
+noscript + #main > #content #left > #info > table {
   width: calc(100% - 130px);
 }
-iframe + #main > #content #right {
+noscript + #main > #content #right {
   -webkit-flex-grow: 1;
   -moz-flex-grow: 1;
   -ms-flex-grow: 1;
@@ -229,7 +229,7 @@ iframe + #main > #content #right {
   flex-direction: column;
   overflow: auto;
 }
-iframe + #main > #content #right #embed {
+noscript + #main > #content #right #embed {
   height: 100%;
   display: -webkit-flex;
   display: -moz-flex;
@@ -237,26 +237,26 @@ iframe + #main > #content #right #embed {
   display: -ms-flex;
   display: flex;
 }
-iframe + #main > #content #right #embed > table {
+noscript + #main > #content #right #embed > table {
   height: 100%;
   background-color: yellow;
 }
-iframe + #main > #content #right #embed > table > tbody > tr:first-child {
+noscript + #main > #content #right #embed > table > tbody > tr:first-child {
   display: none;
 }
-iframe + #main > #content #right #embed > table > tbody > tr:last-child > td > .video {
+noscript + #main > #content #right #embed > table > tbody > tr:last-child > td > .video {
   padding-top: initial !important;
   padding-bottom: initial !important;
   background-color: orange;
   height: 100%;
 }
-iframe + #main > #content #right #embed > table > tbody > tr:last-child > td > .video > iframe:first-of-type {
+noscript + #main > #content #right #embed > table > tbody > tr:last-child > td > .video > iframe:first-of-type {
   display: block;
   background-color: aqua;
   width: 100%;
   height: 100%;
 }
-iframe + #main > #content #right #embed > table > tbody > tr:last-child > td > .video > iframe:last-of-type {
+noscript + #main > #content #right #embed > table > tbody > tr:last-child > td > .video > iframe:last-of-type {
   display: none;
   background-color: pink;
 }
