--- a/style.less
+++ b/style.less
@@ -23,7 +23,7 @@ body {
 
 
 
-img + #main {
+div + #main {
     > #content {
         overflow: auto;
         .flex-display(inline-flex);
@@ -176,7 +176,7 @@ img + #main {
     }
 }
 
-iframe + #main > #content {
+noscript + #main > #content {
     .flex-display();
     .flex-grow(1);
 
